Fix: Regulate margin spacing between items + navbar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,8 +2,8 @@
   font-family: "Lora", sans-serif;
   background-color: #fff5ee;
   min-height: 100vh;
-  padding-top: 50px;
-  padding-bottom: 55px;
+  padding-top: 10px;
+  /* padding-bottom: 55px; */
 }
 
 * {
