--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -1,5 +1,6 @@
 .NavbarComponent {
   opacity: 0.9;
+  border-bottom: 1px solid #dadadf;
 }
 
 .NavLinks {
